# gridlock-disruption-intelligence

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  FEATURE_AVAILABILITY.md  METHODOLOGY.md  README.md  eda_check.py  pyproject.toml  test_map.py  test_predict.py
backend/: main.py
backend/models/: schemas.py
backend/routers/: calibration.py  events.py  predict.py
backend/scoring/: predictive.py
data-pipeline/: calibration_ledger.py  clean.py  predictive_score.py  severity_score.py  train_model.py  validate.py
data-pipeline/artifacts/: calibration_ledger.parquet  calibration_summary.json  cleaned_data.parquet  corridor_lookup.json  feature_importance.json  model.pkl  model_confidence.json  predicted_data.parquet  predictive_cutoffs.json  scored_data.parquet
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CalibrationSparkline.tsx  Leaderboard.tsx  LimitationsSheet.tsx  MapView.tsx  MapWrapper.tsx  ResultCard.tsx  SimulateDisruptionForm.tsx  TimelineReplay.tsx
frontend/lib/: api.ts
